--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
 
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src="bower_components/modernizr/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
 
@@ -36,6 +36,6 @@
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>
       -->
-        <script data-main="js/main" src="js/vendor/require.js"></script>
+        <script data-main="js/main" src="bower_components/requirejs/require.js"></script>
     </body>
 </html>
